# mozo

./: Makefile.am  README  autogen.sh  configure.ac
Mozo/: Makefile.am
data/: Makefile.am
data/icons/: Makefile.am
